# ssg-hs

./: .gitignore  Convert.hs  Html.hs  Markup.hs  README.md  example.html  example.md  hello.html  main.hs  ssg-hs.cabal  stack.yaml
Html/: Internal.hs
app/: Main.hs  OptParse.hs
doc/html/ssg-hs/: Lib-Convert.html  Lib-Env.html  Lib-Html-Internal.html  Lib-Html.html  Lib-Markup.html  Lib-Util.html  Lib.html  README.md  doc-index.html  doc-index.json  index.html  ssg-hs.haddock  ssg-hs.txt
example/: 1.md
src/: Lib.hs
src/Lib/: Convert.hs  Directory.hs  Env.hs  Html.hs  Markup.hs  Single.hs  Util.hs
src/Lib/Html/: Internal.hs
test/: MarkupParsingSpec.hs
